# retrivex

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
examples/: advanced_qa.py  quickstart.py
scripts/: release.py  validate_package.py
src/retrivex/core/: retriever.py
src/retrivex/eval/: __init__.py  base.py  benchmark.py  longbench.py  metrics.py  niah.py  ruler.py  run_evaluation.py
src/retrivex/utils/: chunking.py
tests/integration/: test_end_to_end.py
tests/unit/: test_chunking.py  test_models.py  test_retriever.py
